--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/navigation" app:startDestination="@id/overviewFragment">
+<navigation
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/navigation"
+        app:startDestination="@id/overviewFragment">
 
-    <fragment android:id="@+id/imageViewFragment" android:name="com.example.jewelleryclassification.imagepicker.ImagePickFragment"
-              android:label="ImageViewFragment"/>
-    <fragment android:id="@+id/overviewFragment"
-              android:name="com.example.jewelleryclassification.overview.OverviewFragment"
-              android:label="OverviewFragment"/>
+    <fragment
+            android:id="@+id/overviewFragment"
+            android:name="com.example.jewelleryclassification.overview.OverviewFragment"
+            android:label="OverviewFragment"
+            tools:layout="@layout/fragment_overview">
+        <action
+                android:id="@+id/action_overviewFragment_to_detailFragment"
+                app:destination="@id/detailFragment"/>
+    </fragment>
+    <fragment
+            android:id="@+id/detailFragment"
+            android:name="com.example.jewelleryclassification.detail.DetailFragment"
+            android:label="DetailFragment"
+            tools:layout="@layout/fragment_detail">
+    <argument
+            android:name="selectedImagePath"
+            app:argType="string"/>
+    </fragment>
+    <fragment android:id="@+id/imagePickFragment"
+              android:name="com.example.jewelleryclassification.imagepicker.ImagePickFragment"
+              android:label="ImagePickFragment"/>
 </navigation>
