--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
                 name="viewModel"
-                type="com.example.jewelleryclassification.detail.DetailViewModel"/>
+                type="com.jamlabsai.srj.detail.DetailViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
