--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable name="overviewViewModel"
-                  type="com.example.jewelleryclassification.overview.OverviewViewModel"/>
+                  type="com.jamlabsai.srj.overview.OverviewViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
