--- a/app/src/main/res/layout/grid_view_type.xml
+++ b/app/src/main/res/layout/grid_view_type.xml
@@ -5,7 +5,7 @@
 <data>
     <variable
             name="jwimage"
-            type="com.example.jewelleryclassification.database.JWImage" />
+            type="com.jamlabsai.srj.database.JWImage" />
 </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
